<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="enter_email">Enter Email</string>
    <string name="button">Button</string>
    <string name="createAccount">Button</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Zoom Data -->
    <string name="chooseMonth">Choose a month</string>
    <string name="chooseYear">Choose a year</string>
    <string name="chooseHour">Choose an hour</string>
    <string name="chooseMinute">Choose a minute</string>
    <string name="chooseSecond">Choose a second</string>

    <string-array name="months">
        <item>Select Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="years">
        <item>Select Year</item>
        <item>2020</item>
        </string-array>

    <string-array name="hour">
        <item>Select Hour</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="minute">
        <item>Select Minute</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>

    <string-array name="second">
        <item>"Select Second"</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>

    <string-array name="search">
        <item>Sort by thread name</item>
        <item>Sort by course</item>
        <item>Sort by newest post time</item>
        <item>Sort by oldest post time</item>
    </string-array>

</resources>
