<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateZoomMeeting">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#E7655F"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="Enter Event Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <Spinner
        android:id="@+id/month"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="19dp"
        android:entries="@array/months"
        android:prompt="@string/chooseMonth"
        app:layout_constraintBottom_toTopOf="@+id/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName" />

    <Spinner
        android:id="@+id/year"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:entries="@array/years"
        android:prompt="@string/chooseYear"
        app:layout_constraintEnd_toStartOf="@+id/hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month" />

    <Spinner
        android:id="@+id/hour"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:entries="@array/hour"
        android:prompt="@string/chooseHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <Spinner
        android:id="@+id/minute"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:entries="@array/minute"
        android:prompt="@string/chooseMinute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <Spinner
        android:id="@+id/second"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:entries="@array/second"
        android:prompt="@string/chooseSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour" />

    <Button
        android:id="@+id/confirmZoomCreation"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="createZoomEvent"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classChoose" />

    <EditText
        android:id="@+id/day"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="Day"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName" />

    <Spinner
        android:id="@+id/classChoose"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minute" />

    <EditText
        android:id="@+id/enterZoom"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:hint="Enter Zoom Code"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second" />

</androidx.constraintlayout.widget.ConstraintLayout>